add_library(
        data_structures

        bitset/bitset.c

        unordered_array/unordered_array_set.h
        unordered_array/unordered_array_set.c

        ordered_array_set/ordered_array_set.c
        ordered_array_set/ordered_array_set.h

        array_struct/array.c
        array_struct/array.h

        List/list.c
        List/list.h

        )